2006-09-01  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am: Changed the install-data-local target so the
	  installed munge.init and munge.sysconfig files would only be given
	  the ".new" suffix if the files already existed at the destination
	  and differed from the files about to be installed.

2006-08-31  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/auth_policy.h: Updated comment to add Darwin to the
	  list of platforms supporting getpeereid().

	* configure.ac, config/x_ac_darwin.m4: Added support for Darwin.
	  By defining _APPLE_C_SOURCE via configure, a different version of
	  certain pthread routines is used.  Without it, pthread_cond_wait()
	  is not recognized as a cancellation point; consequently, work_fini()
	  is unable to cancel the worker threads, and munged hangs on
	  pthread_join() at exit as a result.

2006-08-30  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Tweaked formatting.

	* src/libcommon/auth_policy.h: Updated comment regarding when
	  getpeereid() first appeared in FreeBSD.

	* src/etc/munge.init.in: Removed use of UID variable since RedHat
	  returns the error "UID: readonly variable".

	* munge.spec: Replaced use of "daemon" group with "root" group since
	  the daemon group does not exist on AIX by default.  The root group
	  does not exist there either, but RPM seems to quietly deal with it.

2006-08-29  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_arch.m4: Removed leftover code from previous commit.

	* README.AIX, munge.spec, config/x_ac_arch.m4: Fixed so 32-bit &
	  64-bit builds work on AIX without a gcc wrapper script setting either
	  "-maix32" or "-maix64".

	* munge.spec: Tweaked error messages.

2006-08-28  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Fixed aix5.3 %ifos/%ifnos lines to include os_compats.

	* munge.spec: Fixed so both shared & static libs are built on AIX.

	* munge.spec: Fixed so shared libs are built on AIX (ie, changed rpm